--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@next/bundle-analyzer": "^16.1.3",
-    "@studio-freight/lenis": "^1.0.42",
+    "lenis": "^1.0.42",
     "critters": "^0.0.23",
     "framer-motion": "^12.26.2",
     "lucide-react": "^0.562.0",
